--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <app-pesquisa-pessoa></app-pesquisa-pessoa>
 <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-<!-- <app-lancamento-cadastro></app-lancamento-cadastro> -->
-<!-- <app-cadastro-pessoa></app-cadastro-pessoa> -->
+<app-lancamento-cadastro></app-lancamento-cadastro>
+<app-cadastro-pessoa></app-cadastro-pessoa>
