--- a/src/app/pessoas/pessoas-grid/pessoas-grid.component.html
+++ b/src/app/pessoas/pessoas-grid/pessoas-grid.component.html
@@ -1,4 +1,6 @@
-<p-table [value]="pessoas" [paginator]="true" [rows]="5" [responsive]="true">
+<p-table [value]="pessoas" [responsive]="true" [paginator]="true" [rows]="filtro.itensPorPagina" [lazy]="true"
+  [totalRecords]="totalRegistros" (onLazyLoad)="mudarPagina($event)" emptyMessage="Nenhuma pessoa encontrada">
+
   <ng-template pTemplate="header">
     <tr>
       <th>Nome</th>
@@ -17,17 +19,17 @@
       </td>
       <td>
         <span class="p-column-title">Cidade</span>
-        {{ pessoa.cidade }}
+        {{ pessoa.endereco.cidade }}
       </td>
       <td>
         <span class="p-column-title">Estado</span>
-        {{ pessoa.estado }}
+        {{ pessoa.endereco.estado }}
       </td>
       <td>
         <span class="p-column-title">Status</span>
-        <a href="javascript:;" [pTooltip]="pessoa.status ? 'Desativar' : 'Ativar'" tooltipPosition="top"
-          [ngStyle]="{color: pessoa.status === false ? 'red' : 'green'}">
-          {{ pessoa.status ? 'Ativo' : 'Inativo'}}
+        <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top"
+          [ngStyle]="{color: pessoa.ativo === false ? 'red' : 'green'}">
+          {{ pessoa.ativo ? 'Ativo' : 'Inativo'}}
         </a>
       </td>
       <td class="col-acoes">
@@ -38,11 +40,4 @@
     </tr>
   </ng-template>
 
-  <ng-template pTemplate="emptymessage">
-    <tr>
-      <td colspan="5">
-        Nenhuma pessoa encontrada
-      </td>
-    <tr>
-  </ng-template>
 </p-table>
