--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <app-navbar></app-navbar>
 
-<app-pesquisa-pessoa></app-pesquisa-pessoa>
-<app-lancamentos-pesquisa></app-lancamentos-pesquisa>
+<!-- <app-pesquisa-pessoa></app-pesquisa-pessoa> -->
+<!-- <app-lancamentos-pesquisa></app-lancamentos-pesquisa> -->
 <!-- <app-lancamento-cadastro></app-lancamento-cadastro> -->
-<!-- <app-cadastro-pessoa></app-cadastro-pessoa> -->
+<app-cadastro-pessoa></app-cadastro-pessoa>
+
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
+  <p-footer>
+    <button type="button" pButton icon="pi pi-check" label="Sim"
+      (click)="confirmacao.accept()"></button>
+    <button type="button" pButton icon="pi pi-times" label="Não"
+      (click)="confirmacao.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
