--- a/src/app/lancamentos/lancamento-grid/lancamento-grid.component.html
+++ b/src/app/lancamentos/lancamento-grid/lancamento-grid.component.html
@@ -1,5 +1,5 @@
-<p-table [value]="lancamentos" [responsive]="true" [paginator]="true" [rows]="filtro.itensPorPagina" [lazy]="true"
-  [totalRecords]="totalRegistros" (onLazyLoad)="mudarPagina($event)">
+<p-table #tabela [value]="lancamentos" [responsive]="true" [paginator]="true" [rows]="filtro.itensPorPagina" [lazy]="true"
+  [totalRecords]="totalRegistros" (onLazyLoad)="mudarPaginaEvento($event)">
 
   <ng-template pTemplate="emptymessage">
     <tr>
@@ -39,13 +39,12 @@
       </td>
       <td class="col-valor">
         <span class="p-column-title">Valor</span>
-        <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor | number:'1.2-2'
-          }}</span>
+        <span [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor | number:'1.2-2'}}</span>
       </td>
-      <td class="col-acoes">
+      <td class="col-acoes" >
         <span class="p-column-title"></span>
         <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-        <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+        <button (click)="excluirEvento(lancamento)" pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
       </td>
     </tr>
   </ng-template>
