--- a/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form>
+  <form #form="ngForm" (ngSubmit)="salvarPessoa(form)">
 
     <div class="p-grid">
       <div class="p-col-12">
@@ -9,7 +9,7 @@
 
       <div class="p-fluid p-col-12">
         <label>Nome</label>
-        <input pInputText type="text" name="nome" ngModel #nome="ngModel" required minlength="5">
+        <input name="nome" [(ngModel)]="pessoa.nome" pInputText type="text" #nome="ngModel" required minlength="5">
         <app-message [control]="nome" error="required" text="Informe uma nome"></app-message>
         <app-message [control]="nome" error="minlength" text="Minimo de {{nome.errors?.minlength?.requiredLength}} caracteres e
         você digitou até o momento {{nome.errors?.minlength?.actualLength}} caracteres"></app-message>
@@ -17,48 +17,48 @@
 
       <div class="p-fluid p-col-12 p-md-9">
         <label>Logradouro</label>
-        <input pInputText type="text" name="logradouro" ngModel #logradouro="ngModel" required>
-        <app-message [control]="logradouro" error="required" text="Informe um logradouro"></app-message>
+        <input name="logradouro" [(ngModel)]="pessoa.endereco.logradouro" pInputText type="text" #logradouro="ngModel" required>
+         <app-message [control]="logradouro" error="required" text="Informe um logradouro"></app-message>
       </div>
 
       <div class="p-fluid p-col-12 p-md-3">
         <label>Número</label>
-        <input pInputText type="text" name="numero" ngModel #numero="ngModel" required>
+        <input pInputText type="text" name="numero" [(ngModel)]="pessoa.endereco.numero" #numero="ngModel" required>
         <app-message [control]="numero" error="required" text="Informe um numero"></app-message>
       </div>
 
       <div class="p-fluid p-col-12 p-md-4">
         <label>Complemento</label>
-        <input pInputText type="text">
+        <input pInputText type="text" name="complemento" [(ngModel)]="pessoa.endereco.complemento" #complemento="ngModel">
       </div>
 
       <div class="p-fluid p-col-12 p-md-4">
         <label>Bairro</label>
-        <input pInputText type="text" name="bairro" ngModel #bairro="ngModel" required>
+        <input pInputText type="text" name="bairro" [(ngModel)]="pessoa.endereco.bairro" #bairro="ngModel" required>
         <app-message [control]="bairro" error="required" text="Informe um bairro"></app-message>
       </div>
 
       <div class="p-fluid p-col-12 p-md-4">
         <label>CEP</label>
-        <p-inputMask mask="99.999-999" name="cep" ngModel #cep="ngModel" required></p-inputMask>
+        <p-inputMask name="cep" #cep="ngModel" [(ngModel)]="pessoa.endereco.cep" mask="99.999-999" required></p-inputMask>
         <app-message [control]="cep" error="required" text="Informe um cep"></app-message>
       </div>
 
       <div class="p-fluid p-col-12 p-md-6">
         <label>Cidade</label>
-        <input pInputText type="text" name="cidade" ngModel #cidade="ngModel" required>
+        <input pInputText type="text" name="cidade" [(ngModel)]="pessoa.endereco.cidade" #cidade="ngModel" required>
         <app-message [control]="cidade" error="required" text="Informe uma cidade"></app-message>
       </div>
 
       <div class="p-fluid p-col-12 p-md-6">
         <label>Estado</label>
-        <input pInputText type="text" name="estado" ngModel #estado="ngModel" required>
+        <input pInputText type="text" name="estado" [(ngModel)]="pessoa.endereco.estado" #estado="ngModel" required>
         <app-message [control]="estado" error="required" text="Informe um estado"></app-message>
       </div>
 
       <div class="p-col-12">
         <button pButton type="submit" label="Salvar" class="p-button"></button>
-        <button pButton type="submit" label="Novo" class="p-button-warning"></button>
+        <button pButton type="button" label="Novo" class="p-button-warning"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
 
