--- a/src/app/pessoas/pesquisa-pessoa/pesquisa-pessoa.component.html
+++ b/src/app/pessoas/pesquisa-pessoa/pesquisa-pessoa.component.html
@@ -21,7 +21,8 @@
   <div class="p-grid">
     <div class="p-col-12">
       <app-pessoas-grid [pessoas]="pessoas" [filtro]="filtro" [totalRegistros]="totalRegistros"
-        (evento)="aoMudarPagina($event)"></app-pessoas-grid>
+      (eventoMudarPagina)="aoMudarPagina($event)" (eventoExcluir)="confirmarExclusao($event)"
+      (eventoAtualizarStatus)="aoAtualizarStatus($event)" ></app-pessoas-grid>
     </div>
 
     <div class="p-col-12">
