Inserindo rotas e trabalhando em edição de lançamentos!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-navbar></app-navbar>
 
-<!-- <app-pesquisa-pessoa></app-pesquisa-pessoa> -->
-<!-- <app-lancamentos-pesquisa></app-lancamentos-pesquisa> -->
-<!-- <app-lancamento-cadastro></app-lancamento-cadastro> -->
-<app-cadastro-pessoa></app-cadastro-pessoa>
+<router-outlet></router-outlet>
 
 <p-toast></p-toast>
 <p-confirmDialog header="Confirmação" icon="pi pi-question-circle" #confirmacao>
