--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="p-grid">
       <div class="p-col-12">
-        <a href="javascript:;" class="navbar-toggle"
-          (click)="exibindoMenu = !exibindoMenu">
+        <a href="javascript:;" class="navbar-toggle" (click)="exibindoMenu = !exibindoMenu">
           <i class="pi pi-bars"></i></a>
       </div>
     </div>
@@ -11,12 +10,15 @@
 
   <ul class="navbar-menu" [hidden]="!exibindoMenu">
     <li class="navbar-usuario">José</li>
-    <li class="navbar-menu-item">
-      <a href="#">Lançamentos</a></li>
-    <li class="navbar-menu-item">
-      <a href="#">Pessoas</a></li>
-    <li class="navbar-menu-item">
-      <a href="#">Logout</a></li>
+    <li class="navbar-menu-item" routerLinkActive="ativo">
+      <a routerLink="/lancamentos">Lançamentos</a>
+    </li>
+    <li class="navbar-menu-item" routerLinkActive="ativo">
+      <a routerLink="/pessoas">Pessoas</a>
+    </li>
+    <li class="navbar-menu-item" >
+      <a routerLink="">Logout</a>
+    </li>
   </ul>
 
 </nav>
