--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -4,13 +4,14 @@
 
     <div class="p-grid">
       <div class="p-col-12">
-        <h1>Novo Lançamento</h1>
+        <h1> {{ editando ? 'Editando' : 'Novo' }} Lançamento</h1>
       </div>
 
       <div class="p-col-12">
         <div></div>
-        <p-selectButton name="tipo" #tipo [options]="tipos" [(ngModel)]="lancamento.tipo"></p-selectButton>
+        <p-selectButton name="tipo" [options]="tipos" [(ngModel)]="lancamento.tipo" #tipo="ngModel"></p-selectButton>
       </div>
+
 
       <div class="p-fluid p-col-6 p-md-3">
         <label>Vencimento</label>
@@ -22,7 +23,7 @@
 
       <div class="p-fluid p-col-6 p-md-3">
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
-        <p-calendar name="tipo" styleClass="form-control" dateFormat="dd/mm/yy"
+        <p-calendar name="pagamento" styleClass="form-control" dateFormat="dd/mm/yy"
         [showIcon]="true" [readonlyInput]="true" [(ngModel)]="lancamento.dataPagamento" >
         </p-calendar>
       </div>
@@ -66,7 +67,7 @@
       <div class="p-col-12">
         <button pButton type="submit" label="Salvar" class="p-button"></button>
         <button pButton type="button" label="Novo" class="p-button-warning"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+        <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
 
     </div>
