--- a/src/app/lancamentos/lancamento-grid/lancamento-grid.component.html
+++ b/src/app/lancamentos/lancamento-grid/lancamento-grid.component.html
@@ -43,7 +43,7 @@
       </td>
       <td class="col-acoes" >
         <span class="p-column-title"></span>
-        <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+        <a [routerLink]="['/lancamentos', lancamento.codigo]" pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
         <button (click)="excluirEvento(lancamento)" pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
       </td>
     </tr>
