--- a/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
@@ -59,7 +59,7 @@
       <div class="p-col-12">
         <button pButton type="submit" label="Salvar" class="p-button"></button>
         <button pButton type="button" label="Novo" class="p-button-warning"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+        <a routerLink="/pessoas">Voltar para a pesquisa</a>
       </div>
 
     </div>
