--- a/src/app/pessoas/pesquisa-pessoa/pesquisa-pessoa.component.html
+++ b/src/app/pessoas/pesquisa-pessoa/pesquisa-pessoa.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+
   <form autocomplete="off" (ngSubmit)="pesquisar()">
 
     <div class="p-grid">
@@ -26,7 +27,7 @@
     </div>
 
     <div class="p-col-12">
-      <button pButton label="Nova Pessoa"></button>
+      <button routerLink="/pessoas/cadastro" pButton label="Nova Pessoa"></button>
     </div>
   </div>
 
