--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -9,7 +9,7 @@
 
       <div class="p-col-12">
         <div></div>
-        <p-selectButton name="tipo" [options]="tipos" [(ngModel)]="lancamento.tipo" #tipo="ngModel"></p-selectButton>
+        <p-selectButton name="tipo" [(options)]="tipos" [(ngModel)]="lancamento.tipo" #tipo="ngModel"></p-selectButton>
       </div>
 
 
@@ -66,7 +66,7 @@
 
       <div class="p-col-12">
         <button pButton type="submit" label="Salvar" class="p-button"></button>
-        <button pButton type="button" label="Novo" class="p-button-warning"></button>
+        <button (click)="novo(form)" pButton type="button" label="Novo" class="p-button-warning"></button>
         <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
 
