--- a/src/app/pessoas/pessoas-grid/pessoas-grid.component.html
+++ b/src/app/pessoas/pessoas-grid/pessoas-grid.component.html
@@ -42,7 +42,7 @@
       </td>
       <td class="col-acoes">
         <span class="p-column-title"></span>
-        <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+        <a [routerLink]="['/pessoas', pessoa.codigo]" pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
         <button pButton (click)="excluirEvento(pessoa)" icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
       </td>
     </tr>
